[package]
name = "alumina-compiler"
version = "0.2.0"
authors = ["Alexandra Stephens <ast194@uclive.ac.nz>"]
license = "MIT OR Apache-2.0"
description = "Custom compiler for the Alumina (ALO) language"
readme = "../README.md"
keywords = ["cli", "compiler", "language"]
categories = ["compilers", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
char_reader = { path = "../char_reader" }